--- a/server/.eslintrc.json
+++ b/server/.eslintrc.json
@@ -1,16 +1,19 @@
 {
-    "env": {
-        "browser": true,
-        "es2021": true
-    },
-    "extends": "standard-with-typescript",
-    "overrides": [
+    "root": true,
+    "parser": "@typescript-eslint/parser",
+    "plugins": [
+      "@typescript-eslint/eslint-plugin"
     ],
-    "parserOptions": {
-        "ecmaVersion": "latest",
-        "sourceType": "module"
-    },
     "rules": {
-        "semi": ["error", "always"]
-    }
+      "eol-last": ["error", "always"],
+      "semi": ["error", "always"],
+      "indent": ["error", 2],
+      "quotes": ["error", "single"],
+      "object-curly-spacing": ["error", "always"],
+      "no-var": "error", // No utilizar la declaración var para variables
+      // "no-unused-vars": "error", // Detectar variables no utilizadas
+      "strict": ["error", "never"], // No utilizar el modo estricto (strict mode)
+      "prefer-const": "error", // Utilizar const en lugar de let para variables que no cambian de valor
+      "camelcase": "error" // Utilizar camelCase para nombres de variables y propiedades de objetos
+   }
 }
