--- a/client/package.json
+++ b/client/package.json
@@ -16,11 +16,15 @@
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.2",
     "iconoir-react": "^6.8.0",
+    "js-cookie": "^3.0.5",
     "next": "13.4.2",
     "postcss": "8.4.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.2",
     "typescript": "5.0.4"
+  },
+  "devDependencies": {
+    "@types/js-cookie": "^3.0.3"
   }
 }
