--- a/server/package.json
+++ b/server/package.json
@@ -4,9 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "npx nodemon",
+    "dev": "NODE_ENV=development npx nodemon",
     "build": "rimraf ./build && tsc",
-    "start": "node build/index.js",
+    "start": "NODE_ENV=production node build/index.js",
     "lint": "eslint .  --ext .ts --fix",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
